<resources>
    <string name="app_name">Cake</string>
    <string name="image_view">Image View</string>
    <string name="popcorn_caramello">Popcorn Caramello</string>
    <string name="rp_468_000">Rp 468,000</string>
    <string name="profile">Profile</string>
    <string name="priyanka_uzlah_priambodo">Priyanka Uzlah Priambodo</string>
    <string name="priyankauzlah_gmail_com">priyankauzlah@gmail.com</string>
    <string name="desc_1">Step into another world with our multi colored galaxy cake. It\'s the perfect cake for stargazers and dreamers alike. If you want to be the talk of the party then enchant your friends with this glitter sparkling galaxy cake topped with our signature galaxy swirl macarons. Occasion: Adults/Kids Birthday Parties, Office Parties and Other Celebrations Ingredients: chocolate sponge, dark couverture chocolate ganache.</string>
</resources>