<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/iv_profile_uzlah"
        android:layout_width="410dp"
        android:layout_height="311dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/profile_uzlah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_profile_uzlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priyanka_uzlah_priambodo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_profile_uzlah"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_uzlah" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priyankauzlah_gmail_com"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/name_profile_uzlah"
        app:layout_constraintStart_toStartOf="@+id/name_profile_uzlah"
        app:layout_constraintTop_toBottomOf="@+id/name_profile_uzlah" />

</androidx.constraintlayout.widget.ConstraintLayout>